feat: change {id} to {slug} for api/news
