# app/Http/Controllers/Api/NewsController.php
@@ -20,9 +20,9 @@ class NewsController extends Controller
         return response()->json($response);
     }
 
-    public function show(int $id)
+    public function show(string $slug)
     {
-        $response = $this->repository->getById($id);
+        $response = $this->repository->getBySlug($slug);
         return response()->json($response);
     }
 }
